<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:padding="12dp"
    android:background="@drawable/row_bg"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name"
        android:text="@string/food_name"
        android:layout_marginLeft="4dp"
        android:layout_centerHorizontal="true"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dateText"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/name"
        android:text="@string/date_text"
        android:layout_marginTop="6dp"
        android:textStyle="italic"
        android:textColor="#424242"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/dateText"
        android:src="@drawable/apple"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/calories"
        android:text="@string/_120"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/thumbnail"
        android:textColor="#ffff2026"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/calText"
        android:text="@string/cal_text"
        android:layout_alignBaseline="@+id/calories"
        android:layout_toRightOf="@+id/calories"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/hasChild"
        android:text=">"
        android:textSize="35sp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>