<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#8BC34A"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#ff3a382f"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_below="@id/tileText"
        android:layout_centerHorizontal="true"
        android:src="@drawable/apple"
        android:layout_width="150dp"
        android:layout_height="150dp" />

    <LinearLayout
        android:id="@+id/layout"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo"
        android:gravity="center_horizontal"
        android:background="@drawable/row_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    <EditText android:id="@+id/foodEditText"
        android:padding="14dp"
        android:layout_marginTop="18dp"
        android:hint="@string/hint_food"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/caoriesEdit"
        android:padding="14dp"
        android:inputType="number"
        android:hint="@string/hint_calories"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/submitBut"
        android:layout_marginTop="24dp"
        android:text="@string/submit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>